date change in experience

--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
               <h4 class="h4 timeline-item-title">Computer Vision R&D Engineer</h4>
               <h5 class="h5 timeline-item-subtitle">Sequelstring Solutions Pvt. Ltd.</h5>
 
-              <span>2013 — 2015</span>
+              <span>Dec 2021 — Mar 2022</span>
 
               <!-- <p class="timeline-text">
                 Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
@@ -629,7 +629,7 @@
               <h4 class="h4 timeline-item-title">Lead Mobile App Developer</h4>
               <h5 class="h5 timeline-item-subtitle">YWCA of Mumbai</h5>
 
-              <span>2010 — 2013</span>
+              <span>Dec 2020 — Feb 2022</span>
 
               <!-- <p class="timeline-text">
                 Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
@@ -644,7 +644,7 @@
               <h4 class="h4 timeline-item-title">Web Developer</h4>
               <h5 class="h5 timeline-item-subtitle">Shelter Don Bosco</h5>
 
-              <span>2010 — 2013</span>
+              <span>Aug 2021 — Sept 2021</span>
 
               <!-- <p class="timeline-text">
                 Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
